list users in room, styles

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,6 @@
-<p>chat works!</p>
+<h1>Chat</h1>
+<h3>Room: {{me.room}}</h3>
+<ul>
+    <li>{{me.name}}</li>
+    <li *ngFor="let user of users">{{user.name}}</li>
+</ul>
