--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,11 +1,11 @@
 <mat-drawer-container class="container" autosize>
     
     <mat-drawer #drawer class="sidenav" mode="side">
-        <div class="sidenav-content">
+        <div class="content">
             <h1>Chat</h1>
             
             <div class="roomConnection">
-                <h3>Room: {{me.room}}</h3>
+                <h3>Room: {{room}}</h3>
                 <button mat-raised-button
                         matTooltip="copy room id"
                         (click)="copyRoomId()">
@@ -24,23 +24,29 @@
         </div>
     </mat-drawer>
     
-    <button type="button" mat-button (click)="drawer.toggle()">
-        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="menu"></mat-icon>
-    </button>
-    
-    <div class="content">
+    <div class="header">
+        <button type="button" mat-button (click)="drawer.toggle()">
+            <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="menu"></mat-icon>
+        </button>
+    </div>
+    <div class="chatbody">
         <div class="messagesList" #scrollMe>
-            <mat-list role="list">
-                <mat-list-item *ngFor="let message of messages" class="message" role="listitem">
-                    <div mat-line>{{message.content}}</div>
-                    <div mat-line>{{message.author}} - {{message.time}}</div>
-                    <mat-divider></mat-divider>
-                </mat-list-item>
-            </mat-list>
+            <div class="list">
+                <div *ngFor="let message of messages" class="message-body {{message.author == me.name ? 'sent' : message.author == 'system' ? 'system' : 'received'}}">
+                    <div class="message">
+                        <p mat-line class="message-content">{{message.content}}</p>
+                        <div mat-line class="message-info">
+                            <small>
+                                {{message.author}} - <time>{{message.time}}</time>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div class="inputs">
-            <textarea class="textarea" rows="1" placeholder="Message"></textarea>
+            <textarea class="textarea" rows="1" placeholder="Message" [(ngModel)]="message"></textarea>
             <button mat-raised-button (click)="sendMessage()">
                 <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="send"></mat-icon>
             </button>
