--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -15,7 +15,7 @@
             
             <div class="usersList">
                 <ul>
-                    <li>{{me.name}}</li>
+                    <li>{{me.name}} (me)</li>
                     <li *ngFor="let user of users">{{user.name}}</li>
                 </ul>
             </div>
