--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -60,7 +60,11 @@
 .chatbody {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    width: 90%;
+    height: 95%;
+    margin: auto;
+    border: 1px solid #000;
+    border-radius: 5px 5px 0 0;
     
     .messagesList {
         flex: 1 auto;
@@ -133,8 +137,6 @@
         height: 80%;
         margin: auto;
         margin-top: 5%;
-        border: 1px solid #000;
-        border-radius: 5px 5px 0 0;
     }
 
     .sidenav {
