--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -5,10 +5,10 @@
             <h1>Chat</h1>
             
             <div class="roomConnection">
-                <h3>Room: {{room}}</h3>
+                <mat-label>Copy room url</mat-label>
                 <button mat-raised-button
-                        matTooltip="copy room id"
-                        (click)="copyRoomId()">
+                        matTooltip="copy room url"
+                        (click)="copyRoomUrl()">
                     <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="content_copy"></mat-icon>
                 </button>
             </div>    
