--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,14 +2,14 @@
     <h1>Login</h1>
     <form>
         <div class="inputForm">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field class="input-full-width" appearance="fill">
                 <mat-label>Name</mat-label>
                 <input matInput name="name" [(ngModel)]="name" (mouseup)="$event.preventDefault()" (focus)="selectAllContent($event)" autofocus>
             </mat-form-field>
 
             <mat-checkbox class="example-margin" (change)="toggleDisabled()">Enter room id</mat-checkbox>
             
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field class="input-full-width" appearance="fill">
                 <mat-label>Room</mat-label>
                 <input matInput name="room" [(ngModel)]="room" [disabled]="!checkedRoom" (mouseup)="$event.preventDefault()" (focus)="selectAllContent($event)">
             </mat-form-field>
@@ -17,4 +17,18 @@
             <button mat-button color="primary" (click)="submit()">Get in</button>
         </div>
     </form>
+    <footer>
+        <mat-list role="list">
+            <mat-list-item role="listitem">
+                <a href="https://github.com/Elias288/Chat-Angular">Github Repository</a>
+            </mat-list-item>
+            <mat-list-item role="listitem">
+                <a href="https://elias288.github.io/ElelisPage/">Briefcase</a>
+            </mat-list-item>
+            <mat-list-item role="listitem" class="copyright">
+                <p>Creted by <strong>Elías Bianchi</strong> © All rights reserved</p>
+            </mat-list-item>
+          </mat-list>
+        
+    </footer>
 </div>
