--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -65,10 +65,12 @@
 }
 
 .chatbody {
+    width: 90%;
+    min-width: 330px;
+    height: 95%;
     display: flex;
     flex-direction: column;
-    width: 90%;
-    height: 95%;
+    justify-content: flex-end;
     margin: auto;
     border: 1px solid #000;
     border-radius: 5px 5px 0 0;
@@ -139,13 +141,6 @@
 }
 
 @media screen and (min-width: 500px) {
-    .chatbody {
-        width: 80%;
-        height: 80%;
-        margin: auto;
-        margin-top: 5%;
-    }
-
     .sidenav {
         min-width: 300px;
         width: 30%;
@@ -159,7 +154,16 @@
         display: initial;
         border: 0;
     }
+
     .chatbody {
+        width: 100%;
+        max-width: 1000px;
+        min-width: 500px;
+        height: 100vh;
+        box-sizing: border-box;
+        padding-top: 50px;
+        border: 0;
+
         .messagesList {
             max-height: 500px;
             padding: 0 1rem 3rem;
