--- a/src/app/components/page-not-found/page-not-found.component.scss
+++ b/src/app/components/page-not-found/page-not-found.component.scss
@@ -1,12 +1,21 @@
 .not-found {
-    width: 100%;
-    height: 100vh;
-    display: grid;
-    justify-items: center;
-    padding: 0.5rem;
-    box-sizing: border-box;
+    height: 80vh;
+    min-height: 600px;
+    padding: .5rem .5rem 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 
     img {
-        width: 50%;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .not-found {
+        img {
+            max-width: 600px;
+        }
     }
 }
