--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,33 +1,36 @@
 <div class="home">
-    <h1>Login</h1>
-    <form>
-        <div class="inputForm">
-            <mat-form-field class="input-full-width" appearance="fill">
-                <mat-label>Name</mat-label>
-                <input matInput name="name" [(ngModel)]="name" (mouseup)="$event.preventDefault()" (focus)="selectAllContent($event)" autofocus>
-            </mat-form-field>
-
-            <mat-checkbox class="example-margin" (change)="toggleDisabled()">Enter room id</mat-checkbox>
-            
-            <mat-form-field class="input-full-width" appearance="fill">
-                <mat-label>Room</mat-label>
-                <input matInput name="room" [(ngModel)]="room" [disabled]="!checkedRoom" (mouseup)="$event.preventDefault()" (focus)="selectAllContent($event)">
-            </mat-form-field>
-
-            <button mat-button color="primary" type="button" (click)="submit()">Get in</button>
-        </div>
-    </form>
-    <footer>
-        <mat-list role="list">
-            <mat-list-item role="listitem">
-                <a href="https://github.com/Elias288/Chat-Angular">Github Repository</a>
-            </mat-list-item>
-            <mat-list-item role="listitem">
-                <a href="https://elias288.github.io/ElelisPage/">Briefcase</a>
-            </mat-list-item>
-            <mat-list-item role="listitem" class="copyright">
-                <p>Creted by <strong>Elías Bianchi</strong> © All rights reserved</p>
-            </mat-list-item>
-          </mat-list>
-    </footer>
+    <h1>Eleli Chat</h1>
+    <div class="home-content">
+        <mat-tab-group mat-align-tabs="center">
+            <mat-tab label="Users">
+                <div class="container userslist">
+                    <mat-list>
+                        <mat-list-item>
+                            <strong>{{me.name}} (me)</strong>
+                        </mat-list-item>
+                        <mat-divider></mat-divider>
+                        <mat-list-item *ngFor="let user of users">
+                            {{user.name}}
+                        </mat-list-item>
+                        <mat-divider *ngFor="let user of users"></mat-divider>
+                    </mat-list>
+                </div>
+            </mat-tab>
+            <mat-tab label="Rooms">
+                <form class="container rooms">
+                    <mat-checkbox class="example-margin" (change)="toggleDisabled()">Enter room id</mat-checkbox>
+                    <mat-form-field class="input-full-width" appearance="fill">
+                        <mat-label>Room</mat-label>
+                        <input matInput name="room" [(ngModel)]="room" [disabled]="!checkedRoom" (mouseup)="$event.preventDefault()" (focus)="selectAllContent($event)">
+                    </mat-form-field>
+                    <button mat-flat-button color="primary" type="button" (click)="GetInRoom()">Get in</button>
+                </form>
+            </mat-tab>
+            <mat-tab label="Options">
+                <div class="container">
+                    <button mat-flat-button color="warn" (click)="logout()">Logout</button>
+                </div>
+            </mat-tab>
+        </mat-tab-group> 
+    </div>
 </div>
