--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -13,7 +13,7 @@
                 <input matInput name="room" [(ngModel)]="room" [disabled]="!checkedRoom" (mouseup)="$event.preventDefault()" (focus)="selectAllContent($event)">
             </mat-form-field> -->
 
-            <button mat-button color="primary" type="button" (click)="submit()">Get in</button>
+            <button mat-button color="primary" type="button" (click)="login()">Get in</button>
         </div>
     </form>
 </div>
