--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="container" autosize>
+<mat-drawer-container class="chat" autosize>
     
     <mat-drawer #drawer class="sidenav" mode="side">
         <div class="content">
@@ -61,23 +61,6 @@
                                 {{message.author}} - <time>{{message.time}}</time>
                             </small>
                         </div>
-                        <!-- <button *ngIf="message.author != me.name && message.author != 'system'" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                            <mat-icon>more_vert</mat-icon>
-                        </button>
-                        <mat-menu #menu="matMenu" xPosition="after">
-                            <button mat-menu-item (click)="setAnswer(message)">
-                                <mat-icon>arrow_back</mat-icon>
-                                <span>Answer</span>
-                            </button>
-                            <button mat-menu-item disabled>
-                                <mat-icon>voicemail</mat-icon>
-                                <span>Check voice mail</span>
-                            </button>
-                            <button mat-menu-item>
-                                <mat-icon>notifications_off</mat-icon>
-                                <span>Disable alerts</span>
-                            </button>
-                        </mat-menu> -->
                     </div>
                     <button *ngIf="message.author != me.name && message.author != 'system'" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
                         <mat-icon>arrow_drop_down</mat-icon>
